JavaScript am Ende eingebunden

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@ Released   : 20130425
 			
 			<a class="zurueck" onclick="plusSlides(-1)">&#10094;</a>
 			<a class="vor" onclick="plusSlides(1)">&#10095;</a>
-			<div class="slides">
-				<img src="images/header-photo.jpg" width="1150" height="400" alt="" /> 
+			<div id="picture">
+				<div class="slides">
+					<img src="images/header-photo.jpg" width="1150" height="400" alt="" /> 
+				</div>
 			</div>
 			<div class="slides">
 				<img src="images/img03.jpg" width="1150" height="400"/>
