JavaScript genauer dokumentiert, erster versuch mit event listener zu arbeiten -> erfolglos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Released   : 20130425
 		<div id="banner" class="container"> 
 			
 			<a class="zurueck" onclick="plusSlides(-1)">&#10094;</a>
-			<a class="vor" onclick="plusSlides(1)">&#10095;</a>
+			<a class="vor" onclick="plusSlides(+1)">&#10095;</a>
 			<div id="picture">
 				<div class="slides">
 					<img src="images/header-photo.jpg" width="1150" height="400" alt="" /> 
