HTML und CSS für Registration JavaScript erstellt

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@ Released   : 20130425
 			<a class="vor" onclick="plusSlides(+1)">&#10095;</a>
 			<div id="picture">
 				<div class="slides">
-					<img src="images/header-photo.jpg" width="1150" height="400" alt="" /> 
+					<img src="images/header-photo.jpg" width="1100" height="400" alt="" /> 
 				</div>
 			</div>
 			<div class="slides">
-				<img src="images/img03.jpg" width="1150" height="400"/>
+				<img src="images/img03.jpg" width="1100" height="400"/>
 			</div>
 			<div class="slides">
-				<img src="images/img02.jpg" width="1150" height="400"/>
+				<img src="images/img02.jpg" width="1100" height="400"/>
 			</div>
 
 
@@ -133,6 +133,11 @@ Released   : 20130425
 			</ul>
 		</div>
 	</div>
+</div>
+<div id="registieren">
+	<input id="password" type="password" size="30" value="" placeholder="Passwort"> <!-- onkeyup später einfügen, damit jedes mal nach einem Userinput geprüft wird, ob das Passwort nun sicher ist --->
+	<input id ="email" type="email" size="30" placeholder="Email">
+	<p>Registieren Sie sich noch heute und erhalten sie 10% Rabatt auf all usere Produkte </p>
 </div>
 <div id="footer">
 	<p>&copy; Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
