--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@ Released   : 20130425
 	</div>
 </div>
 <div id="registieren">
-	<input id="password" type="password" size="30" value="" placeholder="Passwort"> <!-- onkeyup später einfügen, damit jedes mal nach einem Userinput geprüft wird, ob das Passwort nun sicher ist --->
-	<input id ="email" type="email" size="30" placeholder="Email">
-	<p>Registieren Sie sich noch heute und erhalten sie 10% Rabatt auf all usere Produkte </p>
+	<input id="password" type="password" size="30" value="" placeholder="Passwort"/> <!-- onkeyup später einfügen, damit jedes mal nach einem Userinput geprüft wird, ob das Passwort nun sicher ist --->
+	<input id ="email" type="email" size="30" placeholder="Email"/>
+	<p id="pinhalt">Registieren Sie sich noch heute und erhalten sie 10% Rabatt auf all usere Produkte </p>
 </div>
 <div id="footer">
 	<p>&copy; Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
