CSS für Popup box angepasst

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@ Released   : 20130425
 				</ul>
 			</div>
 		</div>
+
+		<div id="popup">
+				<div>
+					<div class="closebutton"> &times;</div>
+					<h2>Fragebogen</h2>
+					<p>Skala</p>
+					<span class="janein"> </span>
+				</div>
+		</div>
 		
 		<div id="banner" class="container"> 
 			
@@ -60,8 +69,6 @@ Released   : 20130425
 
 
 		</div>
-
-		
 		<div id="three-column" class="container">
 			<header>
 				<h2>Pellentesque tristique ante ut risus</h2>
