Popupbox mit JavaScript verbunden, JavaScript auskommentiert

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ Released   : 20130425
 			</div>
 		</div>		
 			<div id="popup">
-				<div class="closebutton"> &times;</div>
-				<h2>Fragebogen</h2>
-				<p>Skala</p>
+				<div class="closebutton" onclick="popupSchließen()"> &times;</div>
+				<h2 class>Fragen an uns?</h2>
+				<p>Wenn ja, schreiben sie uns gerne eine Email an: someone@untitled.tld </p>
 				<span class="janein"> </span>
 			</div>
 		
