Canvas im HTML integriert

--- a/index.html
+++ b/index.html
@@ -140,10 +140,12 @@ Released   : 20130425
 	</div>
 </div>
 <div id="registieren">
+	<canvas id="canvas" width="60" height="60"></canvas>
 	<input id="password" type="password" size="30" value="" placeholder="Passwort"/> <!-- onkeyup später einfügen, damit jedes mal nach einem Userinput geprüft wird, ob das Passwort nun sicher ist --->
 	<input id ="email" type="email" size="30" placeholder="Email"/>
 	<p id="pinhalt">Registieren</p>
 </div>
+
 <div id="footer">
 	<p>&copy; Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
 </div>
