Anfang JavaScript sticky navigation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Released   : 20130425
 <body>
 <div id="wrapper-bg">
 	<div id="wrapper">
-		<div id="header" class="container">
+		<div id="header" class="container" class="sticky">
 			<div id="logo">
 				<h1><a href="#"><span>Endearing</span>Green</a></h1>
 			</div>
