Navigation ändert sich zu sticky

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@ Released   : 20130425
 <link href="default_ie6.css" rel="stylesheet" type="text/css" />
 <![endif]-->
 </head>
-<body>
+<body onscroll="fixNavigation()">
+
 <div id="wrapper-bg">
 	<div id="wrapper">
-		<div id="header" class="container" class="sticky">
+		<div id="header" class="container">
 			<div id="logo">
 				<h1><a href="#"><span>Endearing</span>Green</a></h1>
 			</div>
