Popup anzeigen, wieder auf 30 Sekunden gesetzt (wurde geändert um zu schauen, ob fixNavigation () nach dem schließen des Popups wieder ausgeführt wird

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Released   : 20130425
 </div>
 <div id="registieren">
 	<canvas id="canvas" width="60" height="60"></canvas>
-	<input id="password" type="password" size="30" value="" placeholder="Passwort"/> <!-- onkeyup später einfügen, damit jedes mal nach einem Userinput geprüft wird, ob das Passwort nun sicher ist --->
+	<input id="password" type="password" size="30" value="" placeholder="Passwort" onkeyup="kenntwortPrufen"/> <!-- onkeyup später einfügen, damit jedes mal nach einem Userinput geprüft wird, ob das Passwort nun sicher ist --->
 	<input id ="email" type="email" size="30" placeholder="Email"/>
 	<p id="pinhalt">Registieren</p>
 </div>
