ajax projekt nicht lösbar

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ Released   : 20130425
 				<h2 class>Fragen an uns?</h2>
 				<p>Wenn ja, schreiben sie uns gerne eine Email an: someone@untitled.tld </p>
 				<span class="janein"> </span>
+				<canvas id="canvaslachen" width="60" height="60"></canvas>
+				<canvas id="canvastraurig" width="60" height="60"></canvas>
 			</div>
 		
 		
@@ -139,12 +141,6 @@ Released   : 20130425
 			</ul>
 		</div>
 	</div>
-</div>
-<div id="registieren">
-	<canvas id="canvas" width="60" height="60"></canvas>
-	<input id="password" type="password" size="30" value="" placeholder="Passwort" onkeyup="kennwortPrufen(inhalt)"/> <!-- onkeyup später einfügen, damit jedes mal nach einem Userinput geprüft wird, ob das Passwort nun sicher ist --->
-	<input id ="email" type="email" size="30" placeholder="Email"/>
-	<p id="pinhalt"></p>
 </div>
 <div id="footer">
 	<p>&copy; Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
