canvas elemente eingefügt und onclick function ergänzt

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@ Released   : 20130425
 	</div>
 </div>
 <div id="registieren">
-	<canvas id="canvas" width="60" height="60" onclick="canvasGeklickt"></canvas>
-	<canvas id="canvasneutral" width="60" height="60" onclick="canvasGeklickt();"></canvas>
-	<canvas id="canvaslachen" width="60" height="60"></canvas>
-	<p id="pinhalt">Wählen sie das Emoji aus, das ihre Stimmungen am besten wiederspiegelt</p>
+	<canvas id="canvas" width="60" height="60" onclick="canvassauer()"></canvas>
+	<canvas id="canvasneutral" width="60" height="60" onclick="canvasneutral();"></canvas>
+	<canvas id="canvaslachen" width="60" height="60" onclick="canvaslachen()"></canvas>
+	<p id="pinhalt">Wählen sie das Emoji aus, das ihre Stimmungen wiederspiegelt</p>
 </div>
 <div id="footer">
 	<p>&copy; Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
