--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@ Released   : 20130425
 	<canvas id="canvasneutral" width="60" height="60" onclick="canvasneutral();"></canvas>
 	<canvas id="canvaslachen" width="60" height="60" onclick="canvaslachen()"></canvas>
 	<p id="pinhalt">Wählen sie das Emoji aus, das ihre Stimmungen wiederspiegelt</p>
+	<h2>Brauchen sie hilfe? Wenn ja, wenden Sie sich an unsere Mitarbeiter</h2>
+	<div id="personen"></div>
+	<script type="text/javascript" src="ajax.js"></script>
 </div>
 <div id="footer">
 	<p>&copy; Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
