--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@ Released   : 20130425
 	<canvas id="canvasneutral" width="60" height="60" onclick="canvasneutral();"></canvas>
 	<canvas id="canvaslachen" width="60" height="60" onclick="canvaslachen()"></canvas>
 	<p id="pinhalt">Wählen sie das Emoji aus, das ihre Stimmungen wiederspiegelt</p>
-	<h2>Brauchen sie hilfe? Wenn ja, wenden Sie sich an unsere Mitarbeiter</h2>
+</div>
+<div id="mitarbeiter">
+	<p>Brauchen sie hilfe? <p2>
 	<div id="personen"></div>
 	<script type="text/javascript" src="ajax.js"></script>
 </div>
